--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,40 @@
-version: '3.1'
+version: '3.7'
 services:
+
+  todo-app:
+    image: todo-app
+    environment: 
+      - DB_USERNAME=todo-app
+      - DB_PASSWORD=0000
+      - DB_HOSTNAME=db
+      - DB_NAME=todo
+      - DB_PORT=3306
+      - TODO_APP_PORT=3000
+    networks:
+      - private-network
+    ports:
+      - 3000:3000
+    depends_on: 
+      - db
+
   db:
     image: mysql:8.0.15
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    networks:
+      - private-network
     environment:
-      MYSQL_ROOT_PASSWORD: 'root'
-      MYSQL_DATABASE: 'todo'
-      MYSQL_USER: 'todo-app'
-      MYSQL_PASSWORD: '0000'
-    ports:
-      - 3318:3306
-    # Change this to your local path
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=todo
+      - MYSQL_USER=todo-app
+      - MYSQL_PASSWORD=0000
     volumes:
       - dbvolume:/var/lib/mysql
 
 volumes:
   dbvolume:
+
+networks:
+  private-network:
+    name: private-network
+    driver: overlay
