added automatic fetch for DB name && hidden db password

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -30,6 +30,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
 
+    - run: |
+        DB_HOSTNAME=`make rds-endpoint`
+        sed -i "s/\%db_hostname\%/\"$DB_HOSTNAME\"/" task-definition.json 
+
+    - shell: bash
+      env:
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      run: sed -i "s/\%db_hostname\%/\"$DB_HOSTNAME\"/" task-definition.json 
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
