--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+/monitoring-scripts/configec2.sh
+/infrastructure/ecs-devops-todo-cdk/
