--- a/monitoring-scripts/installation.sh.template
+++ b/monitoring-scripts/installation.sh.template
@@ -15,7 +15,7 @@ sudo mv prometheus-2.1.0.linux-amd64/consoles prometheus-2.1.0.linux-amd64/conso
 sudo rm -r prometheus-2.1.0.linux-amd64*
 
 # Configuring Prometheus
-sudo cat prometheus.yml > /etc/prometheus/prometheus.yml
+sudo cp prometheus.yml /etc/prometheus/prometheus.yml
 sudo useradd -rs /bin/false prometheus
 sudo chown -R prometheus: /etc/prometheus /var/lib/prometheus
 
